refactor: 메서드 오버라이딩을 사용하여 watcher가 존재하는 경우의 saveTeam 픽스쳐 생성